--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
     </title>
 </head>
 <body>
-    <div class="logo">
+    <div class=header>
+        <div class="logo">
+        </div>
+        <div class="title">
+        </div>
     </div>
-    <div class="header">
-    </div>
+    <div style="clear:both;"></div>
     <div class="menu">
     </div>
     <div class="content">
         <p>I have born</p>
     </div>
-    <footer>
-    </footer>
+    <div class="footer">
+        <center>
+        Copyright Ilya Sukhov, <a href="mailto:tovarischsuhov0@yadex.ru">tovarischsuhov0@yandex.ru</a><br/>
+        2016
+        </center>
+    </div>
 </body>
 </html>
