--- a/guest_book.html
+++ b/guest_book.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <link rel="stylesheet" type="text/css" href="static/main.css">
     <title>
-        Main Page
+        Guest Book
     </title>
 </head>
 <body>
@@ -13,6 +13,7 @@
             <img src="static/logo.png">
         </div>
         <div class="title">
+        Guest Book
         </div>
     </div>
     <div class="menu">
