--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <img src="static/logo.png">
         </div>
         <div class="title">
+            About Me
         </div>
     </div>
     <div class="menu">
