All exept gueat book is ready

--- a/contacts.html
+++ b/contacts.html
@@ -25,7 +25,13 @@
         </ul>
     </div>
     <div class="content">
-        <p>I have born</p>
+        <h1>Here you can find some contact information, if you want contact me.</h1>
+        <ul>
+            <li>My e-mail: <a href="mailto:tovarischsuhov0@yandex.ru">tovarischsuhov0@yandex.ru</a></li>
+            <li>My GitHub account: <a href="http://github.com/TovarischSuhov">http://github.com/TovarischSuhov</a></li>
+            <li>My VK page: <a href="https://vk.com/tovarisch_suhov">https://vk.com/tovarisch_suhov</a></li>
+            <li>My facebook page: <a href="https://www.facebook.com/profile.php?id=100002180524842">https://www.facebook.com</a></li>
+        </ul>
     </div>
     <div class="footer">
         Copyright Ilya Sukhov, <a href="mailto:tovarischsuhov0@yadex.ru">tovarischsuhov0@yandex.ru</a><br/>
