--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
-    <div class="content">
-        <p>I have born</p>
+    <div class="content" style="text-align:center;">
+        <p>My name is Ilya. I'm a 4th degree student in the Obninsk branch of MEPhI.</p>
+        <p>I'm intrested in open source, Perl, Python, C++ and Unix administration. Also I have some open source projects writen by my own.</p>
+        <p>I work as Linux engineer in Yandex.</p>
     </div>
     <div class="footer">
         Copyright Ilya Sukhov, <a href="mailto:tovarischsuhov0@yadex.ru">tovarischsuhov0@yandex.ru</a><br/>
