--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,93 @@
         </ul>
     </div>
     <div class="content">
-        <p>I have born</p>
+       <h1>Here you can find my projects.</h1>
+       <table class="projects">
+            <tr>
+                <th>
+                Short description
+                </th>
+                <th>
+                Source Code
+                </th>
+                <th>
+                Status
+                </th>
+                <th>
+                Web Page(if exists)
+                </th>
+            </tr>
+            <tr>
+                <td>
+                Script generates GIF animations from satelite photos
+                </td>
+                <td>
+                <a href="https://github.com/TovarischSuhov/ElectroL">https://github.com/TovarischSuhov/ElectroL</a>
+                </td>
+                <td class="abadoned">
+                Stoped
+                </td>
+                <td>
+                None
+                </td>
+            </tr>
+            <tr>
+                <td>
+                Info web page
+                </td>
+                <td>
+                <a href="https://github.com/TovarischSuhov/WebP">https://github.com/TovarischSuhov/WebP</a>
+                </td>
+                <td class="active">
+                Active
+                </td>
+                <td>
+                None
+                </td>
+            </tr>
+            <tr>
+                <td>
+                Local monitoring daemon
+                </td>
+                <td>
+                <a href="https://github.com/softmon/local_mon">https://github.com/softmon/local_mon</a>
+                </td>
+                <td class="frozen">
+                Frozen
+                </td>
+                <td>
+                None
+                </td>
+            </tr>
+            <tr>
+                <td>
+                Server monitorig daemon
+                </td>
+                <td>
+                <a href="https://github.com/softmon/softmon_server">https://github.com/softmon/softmon_server</a>
+                </td>
+                <td class="in_progress">
+                In progress
+                </td>
+                <td>
+                None
+                </td>
+            </tr>
+            <tr>
+                <td>
+                Common monitoring scripts
+                </td>
+                <td>
+                <a href="https://github.com/softmon/common_checks">https://github.com/softmon/common_checks</a>
+                </td>
+                <td class="frozen">
+                Frozen
+                </td>
+                <td>
+                None
+                </td>
+            </tr>
+       </table>
     </div>
     <div class="footer">
         Copyright Ilya Sukhov, <a href="mailto:tovarischsuhov0@yadex.ru">tovarischsuhov0@yandex.ru</a><br/>
