--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="index.html">Main Page</a></li>
             <li><a href="projects.html">My Projects</a></li>
-            <li><a href="guest_book.html">Guest Book</a></li>
+            <li><a href="guest_book.php">Guest Book</a></li>
             <li><a href="contacts.html">Contacts</a></li>
         </ul>
     </div>
